[CSJHW-4]: доработал дополнительное задание в соответствии с изменениями по результатам ревью из основного задания

--- a/src/Route256.PriceCalculator.ConsoleApp/appsettings.json
+++ b/src/Route256.PriceCalculator.ConsoleApp/appsettings.json
@@ -4,7 +4,7 @@
             "Default": "Debug",
             "System": "Information",
             "Microsoft": "Information",
-            "Route256.PriceCalculator.ConsoleApp": "Information"
+            "Route256.PriceCalculator.ConsoleApp": "Debug"
         }
     },
     "PriceCalculatorAppOptions": {
